==> nvl1109/lora/lora.c <==
#include <stdio.h>
#include <string.h>
#include <rom/ets_sys.h>
#include "esp_log.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "lora.h"
#define REG_FIFO                 0x00
#define REG_OP_MODE              0x01
#define REG_FRF_MSB              0x06
#define REG_FRF_MID              0x07
#define REG_FRF_LSB              0x08
#define REG_PA_CONFIG            0x09
#define REG_OCP                  0x0b
#define REG_LNA                  0x0c
#define REG_FIFO_ADDR_PTR        0x0d
#define REG_FIFO_TX_BASE_ADDR    0x0e
#define REG_FIFO_RX_BASE_ADDR    0x0f
#define REG_FIFO_RX_CURRENT_ADDR 0x10
#define REG_IRQ_FLAGS            0x12
#define REG_RX_NB_BYTES          0x13
#define REG_PKT_SNR_VALUE        0x19
#define REG_PKT_RSSI_VALUE       0x1a
#define REG_MODEM_CONFIG_1       0x1d
#define REG_MODEM_CONFIG_2       0x1e
#define REG_PREAMBLE_MSB         0x20
#define REG_PREAMBLE_LSB         0x21
#define REG_PAYLOAD_LENGTH       0x22
#define REG_MODEM_CONFIG_3       0x26
#define REG_FREQ_ERROR_MSB       0x28
#define REG_FREQ_ERROR_MID       0x29
#define REG_FREQ_ERROR_LSB       0x2a
#define REG_RSSI_WIDEBAND        0x2c
#define REG_DETECTION_OPTIMIZE   0x31
#define REG_INVERTIQ             0x33
#define REG_DETECTION_THRESHOLD  0x37
#define REG_SYNC_WORD            0x39
#define REG_INVERTIQ2            0x3b
#define REG_DIO_MAPPING_1        0x40
#define REG_DIO_MAPPING_2        0x41
#define REG_VERSION              0x42
#define REG_PA_DAC               0x4d

void setSPIFrequency(uint32_t frequency)
{
  // _spiSettings = SPISettings(frequency, MSBFIRST, SPI_MODE0);
    ESP_LOGE(TAG, "setSPIFrequency is not implemeted");
}

void dumpRegisters()
{
    ESP_LOGI(TAG, "RFM95 Registers:");
  for (int i = 0; i < 128; i++) {
    ESP_LOGI(TAG, "addr 0x%02x = 0x%x", i, readRegister(i));
  }
}

uint8_t singleTransfer(uint8_t address, uint8_t value)
{
    esp_err_t ret;
    spi_transaction_t t;

  // gpio_set_level(RFM95_nCS, 0);

    memset(&t, 0, sizeof(t));       //Zero out the transaction
    t.flags = SPI_TRANS_USE_TXDATA | SPI_TRANS_USE_RXDATA;
    t.length=8;                     //Command is 8 bits
    t.addr = address;
    t.tx_data[0] = value;
    t.rxlength = 8;
    ret=spi_device_polling_transmit(s_spi, &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.

  // gpio_set_level(RFM95_nCS, 1);

  return t.rx_data[0];
}
